# Lite_Agilex_API

./: .gitignore  README.md  environment.yml  requirements.txt
config/: default.yaml  local.yaml.example
docs/: AGENT_HANDOVER.md  API_OVERVIEW.md  DEBUG_LOG.md  DEVELOPMENT_PLAN.md  HARDWARE.md  OFFICIAL_DOC_LINKS.md
examples/: http_get_maps.py  ws_subscribe_status.py
python/agilex_client/: __init__.py  agent_api.py  client.py  config_loader.py  coords.py  map_store.py
ros2_ws/src/agilex_chassis_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/agilex_chassis_bridge/agilex_chassis_bridge/: chassis_bridge_node.py  laser_conversion.py  map_conversion.py
ros2_ws/src/agilex_chassis_bridge/resource/: agilex_chassis_bridge
ros2_ws/src/agilex_chassis_bridge/rviz/: chassis_map.rviz
ros2_ws/src/agilex_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/agilex_msgs/srv/: GetChassisPose.srv  NavigateToPose.srv  SaveDebugMap.srv  SetInitialPose.srv  StartLocalization.srv  StartMapping.srv  StopMapping.srv
scripts/: agent_get_map.sh  agent_get_pose.sh  agent_set_target_pose.sh  bootstrap_once.sh  build_ros_ws.sh  check_connectivity.sh  cmd_echo_pose.sh  cmd_get_map.sh  cmd_get_pose.sh  cmd_navigate.sh  cmd_save_debug_map.sh  cmd_set_init_pose.sh  cmd_start_localization.sh  cmd_start_mapping.sh  cmd_stop_mapping.sh  env.sh  gen_rviz_config.py  install_ros_deps.sh  ros2_env.sh  run_bridge.sh  run_map_viewer.sh  run_ros2.sh  run_rviz.sh  setup_conda_env.sh  setup_venv.sh
vcs/: external_repositories.md
web/: __init__.py
web/map_viewer/: __init__.py  index.html  (+1 more)
