<?xml version="1.0"?>
<package format="3">
  <name>agilex_chassis_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge node for AgileX chassis.</description>
  <maintainer email="stvli@example.com">stvli</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>agilex_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
